<resources>
    <string name="app_name">오늘어때</string>
    <string name="splash_text">오늘\n어때</string>
    <string name="splash_text_guide">오늘은 어땠나요?</string>
    <string name="log_in">로그인</string>
    <string name="sign_up">회원가입</string>
    <string name="log_in_please">로그인 하세요</string>
    <string name="secret_diary">비밀 일기</string>
    <string name="select_cover">커버 사진을 선택하세요</string>
    <string name="select_today_image">오늘의 사진을 선택하세요</string>
    <string name="select_an_image">오늘의 사진을 선택하세요</string>
    <string name="cancel">취소</string>
    <string name="confirm">확인</string>
    <string name="save">저장</string>
    <string name="my_diaries">내 일기장</string>
    <string name="loading_data">데이터를 불러오는 중입니다..</string>
    <string name="uploading">업로드 중입니다..</string>
    <string name="create_diary_or_page">새 일기장을 만들까요?</string>
    <string name="write_now">지금 새 일기를 쓸까요?</string>
    <string name="sign_out">로그아웃</string>
    <string name="dialog_quit">앱을 종료합니다.</string>
    <string name="diaries">일기장</string>
    <string name="no_result">검색 결과가 없습니다</string>
    <string name="liked_diaries">좋아하는 일기장</string>
    <string name="font_license">글꼴\n라이센스</string>
    <string name="fields" translatable="false">fields</string>
    <string name="sha_256" translatable="false">SHA-256</string>
    <string name="notification_channel_name">기본 알림 채널</string>
    <string name="basic_channel_title">기본 알림</string>

    <string name="delete_diary">일기장 삭제</string>
    <string name="edit_diary">커버 수정</string>
    <string name="delete_page">일기 삭제</string>
    <string name="edit_page">일기 수정</string>
    <string name="write_new_page">일기 쓰기</string>

    <!--Toast-->
    <string name="auth_failed">인증 실패. 다시 시도해보세요</string>
    <string name="auth_success">로그인 했어요 !</string>
    <string name="write_content_toast">글을 입력하세요</string>
    <string name="write_name">이름을 입력하세요</string>
    <string name="uploaded">업로드 완료</string>
    <string name="delete_success">삭제 완료</string>
    <string name="network_not_connected">요청 실패. 인터넷 연결을 확인하세요</string>
    <string name="image_load_failed">이미지를 불러올 수 없습니다.</string>
    <string name="network_not_connected_quit">인터넷에 연결되어있지 않습니다. 앱을 종료합니다</string>
    <string name="edit_complete">수정 완료</string>
    <string name="account_save_failed">계정 정보 저장 실패</string>
    <string name="already_have_account">이메일이 같은 구글 계정으로 로그인 하신 정보가 있어요. 구글계정으로 로그인해주세요.</string>

    <!--hint-->
    <string name="write_title">일기장 제목을 입력하세요</string>
    <string name="write_content">일기..</string>
    <string name="name">이름</string>
    <string name="comment">소개 글</string>
    <string name="select_new_image">새로운 사진을 선택하세요</string>
    <string name="search">검색</string>
    <string name="hashTag">#해시태그</string>

    <!--페이스북 로그인용-->
    <string name="email">email</string>
    <string name="facebook_app_id" translatable="false">2374927029431149</string>
    <string name="fb_login_protocol_scheme" translatable="false">fb2374927029431149</string>

    <!--Firebase-->
    <string name="fdb_diaries" translatable="false">diaries</string>
    <string name="fdb_users" translatable="false">users</string>
    <string name="fdb_uid" translatable="false">uid</string>
    <string name="fdb_profile_image_url" translatable="false">profileImageUrl</string>
    <string name="fdb_cover_image_url" translatable="false">coverImageUrl</string>
    <string name="fdb_pages" translatable="false">pages</string>
    <string name="fdb_title" translatable="false">title</string>
    <string name="fdb_user_name" translatable="false">userName</string>
    <string name="fdb_comment" translatable="false">comment</string>
    <string name="fstr_user_images" translatable="false">userImages</string>
    <string name="fstr_diary_images" translatable="false">diaryImages</string>
    <string name="fdb_private" translatable="false">private</string>
    <string name="fdb_createTime" translatable="false">createTime</string>
    <string name="fdb_key">key</string>
    <string name="fdb_content">content</string>
    <string name="fdb_image_url" translatable="false">imageUrl</string>
    <string name="fdb_like_users" translatable="false">likeUsers</string>
    <string name="fdb_hash" translatable="false">hash</string>
    <string name="fdb_encoded_string" translatable="false">encodedString</string>
    <string name="fcm_send_url" translatable="false">https://fcm.googleapis.com/fcm/send</string>
    <string name="fcm_title">좋아하는 일기장의 새 글</string>
    <string name="fcm_text_1">님의</string>

    <string name="media_type" translatable="false">application/json; charset=utf-8</string>
    <string name="request_header_content_type" translatable="false">Content-Type</string>
    <string name="request_header_content_type_value" translatable="false">application/json</string>
    <string name="request_header_authorization" translatable="false">Authorization</string>
    <string name="request_header_authorization_value" translatable="false">key=AIzaSyBs4ptvz5llhVpwL3sEcQUmNy-F7SehJ5o</string>

    <string name="date_format">yyyy년 M월 d일</string>

    <string name="admob_app_id" translatable="false">ca-app-pub-4270520106393473~2766393943</string>
    <string name="admob_banner_id" translatable="false">ca-app-pub-4270520106393473/5781560128</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>