<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="5dp">

        <ImageView
            android:id="@+id/accountFragment_profileImageView"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="40dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:srcCompat="@tools:sample/avatars" />

        <TextView
            android:id="@+id/accountFragment_nameTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="45dp"
            android:textSize="20sp"
            app:layout_constraintStart_toEndOf="@+id/accountFragment_guideLine"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="이름" />

        <TextView
            android:id="@+id/accountFragment_commentTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            tools:text="소개글"
            android:textSize="13sp"
            app:layout_constraintStart_toStartOf="@+id/accountFragment_nameTextView"
            app:layout_constraintTop_toBottomOf="@+id/accountFragment_nameTextView" />

        <TextView
            android:id="@+id/accountFragment_guideLine"
            android:layout_width="1dp"
            android:layout_height="120dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="30dp"
            android:background="@color/letter_grey"
            app:layout_constraintStart_toEndOf="@+id/accountFragment_profileImageView"
            app:layout_constraintTop_toTopOf="parent" />

        <FrameLayout
            android:id="@+id/accountFragment_frameLayout"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="5dp"
            android:background="@android:color/transparent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/accountFragment_tabLayout" />

        <Button
            android:id="@+id/accountFragment_editButton"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_marginStart="15dp"
            android:background="@android:drawable/ic_menu_edit"
            app:layout_constraintBottom_toBottomOf="@+id/accountFragment_nameTextView"
            app:layout_constraintStart_toEndOf="@+id/accountFragment_nameTextView"
            app:layout_constraintTop_toTopOf="@+id/accountFragment_nameTextView" />

        <Button
            android:id="@+id/accountFragment_menuButton"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="10dp"
            android:background="@drawable/ic_menu"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:id="@+id/accountFragment_slideMenu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:orientation="vertical"
            android:visibility="invisible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/accountFragment_menuButton">

            <Button
                android:id="@+id/accountFragment_signOutButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/light_grey"
                android:elevation="3dp"
                android:text="@string/sign_out"
                android:textSize="15sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/accountFragment_menuButton" />

            <Button
                android:id="@+id/accountFragment_licenseGuideButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="1dp"
                android:background="@color/light_grey"
                android:elevation="3dp"
                android:text="@string/font_license"
                android:textSize="15sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/accountFragment_menuButton" />
        </LinearLayout>

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/accountFragment_tabLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/accountFragment_guideLine">

            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/my_diaries" />

            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/liked_diaries" />
        </com.google.android.material.tabs.TabLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>